basic-prac/multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kucc4
spec:
  containers:
  - image: redis
    name: redis
  - image: consul
    name: consul
